--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-  language: python
-  python:
-    - "2.7"
-    - "nightly"
+language: python
+
+python:
+
+  - "2.7"
+
+script: 
+
+  - python unit-test-by-Wookjin.py
